# basic-raytracing

./: .gitignore  CMakeLists.txt  QUEJAS.txt  README.md  geometry.hpp  img.txt  imgppm.txt  planet.cpp  references.txt  station.cpp
include/: color_spaces.hpp  geometry.hpp  image.hpp  image_reader.hpp  image_writer.hpp  light.hpp  materials.hpp  numbers.hpp  object_set.hpp  path_tracing.hpp  photon_mapping.hpp  planetary_station.hpp  ppm.hpp  program.hpp  progress_bar.hpp  random.hpp  ray_tracing.hpp  raytracing.hpp  scene_reader.hpp  shading.hpp  shapes.hpp  task_divider.hpp  tone_mapping.hpp
include/format/: bmp.hpp  ppm.hpp
include/macros/: constructor_wrapper.hpp
include/meta/: unfold_array.hpp
include/shapes/: disk.hpp  plane.hpp  polygon.hpp  shape.hpp  sphere.hpp
lib/concurrent_bounded_queue/: CMakeLists.txt  Readme.txt
lib/concurrent_bounded_queue/include/: bounded_queue.hpp  concurrent_bounded_queue.hpp
lib/concurrent_bounded_queue/include/src/: bounded_queue.ipp  concurrent_bounded_queue.ipp
lib/kdtree/include/kdtree/: kdtree.hpp
lib/progress_bar/: CMakeLists.txt
lib/progress_bar/include/progress_bar/: text_progress_bar.hpp
lib/progress_bar/src/: text_progress_bar.cpp
lib/queue/: README.txt
lib/queue/include/queue/: concurrent_bounded_queue.hpp
lib/queue/include/queue/src/: bounded_queue.ipp  concurrent_bounded_queue.ipp
scenes/: cornel_box_diffuse_area.scene  cornel_box_diffuse_area_cube.scene  cornel_box_diffuse_area_disk.scene  cornel_box_diffuse_point.scene  cornel_box_diffuse_point_cube.scene  cornel_box_diffuse_point_hexagon_gap.scene  cornel_box_materials_area.scene  cornel_box_materials_area_disk.scene  cornel_box_materials_disk_cube.scene  cornel_box_materials_disk_gap_cube.scene  cornel_box_materials_point.scene  cornel_box_materials_point_cube.scene  cornel_box_materials_point_hexagon_gap.scene  cornel_box_materials_point_no_roof.scene  cornel_box_specular_area.scene  cornel_box_specular_point.scene
src/: color_spaces.cpp  geometry.cpp  hsv.cpp  image.cpp  main.cpp  materials.cpp  numbers.cpp  path_tracer.cpp  path_tracing.cpp  photon_mapping.cpp  planet.cpp  planetary_station.cpp  ppm.cpp  ray_tracing.cpp  raytracing.cpp  renderer.cpp  scene_reader.cpp  shapes.cpp  station.cpp  task_divider.cpp  testMatrix.cpp  tone_mapper.cpp  tone_mapping.cpp
src/format/: bmp.cpp  ppm.cpp
src/inline/: image.ipp  light.ipp  materials.ipp  shading.ipp
src/scenes/: README.md  cornell_box_1.cpp  cornell_box_1.ipp  cornell_box_test.ipp  scene_lab4.cpp
src/shapes/: disk.cpp  disk.ipp  limited_plane.ipp  plane.cpp  plane.ipp  polygon.ipp  sphere.cpp
test/: test_base_inverse_identity.cpp  test_intersections.cpp  test_planetary_station.cpp  test_ppm_parser.cpp
